--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "gatsby": "^2.23.7",
+    "gatsby-plugin-netlify-cms": "^6.0.0",
+    "netlify-cms-app": "^2.15.57",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
